--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,17 @@
-.gradle
-/build/
+.DS_Store
+node_modules
+dist
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+/test
+selenium-debug.log
 
-# Ignore Gradle GUI config
-gradle-app.setting
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
 
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
-
-# Cache of project
-.gradletasknamecache
-
-# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
-# gradle/wrapper/gradle-wrapper.properties
+target
