--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -12,7 +12,7 @@ mybatis:
 
 jwt:
   header: Authorization
-  secret: 123456
+  secret: salt
   expiration: 604800
   tokenHead: "Bearer"
   route:
@@ -23,3 +23,4 @@ jwt:
 debug: true
 logging:
   level: debug
+
